# scheduler

./: .gitignore  .travis.yml  README.md  appveyor.yml  cabal.project  hie.yaml  stack-coveralls.yaml  stack-extra-deps.yaml  stack-ghc-8.0.yaml  stack.yaml
.azure/: job.yml  pipelines.yml
.github/workflows/: ci.yaml
scheduler/: CHANGELOG.md  README.md  scheduler.cabal
scheduler-benchmarks/: CHANGELOG.md  README.md  Setup.hs  after-atomic.html  before-atomic.html  mapM.html  scheduler-benchmarks.cabal
scheduler-benchmarks/bench/: Scheduler.hs
scheduler/bench/: Scheduler.hs
scheduler/src/Control/: Scheduler.hs
scheduler/src/Control/Scheduler/: Computation.hs  Global.hs  Internal.hs  Queue.hs  Types.hs
scheduler/tests/: doctests.hs
scheduler/tests/Control/: SchedulerSpec.hs
scripts/: doctest.sh
stack/: ghc-8.0.2.yaml  ghc-8.10.7.yaml  ghc-8.2.2.yaml  ghc-8.4.4.yaml  ghc-8.6.5.yaml  ghc-8.8.4.yaml  ghc-9.0.2.yaml  ghc-9.2.8.yaml  ghc-9.4.8.yaml  ghc-9.6.6.yaml  ghc-9.8.4.yaml
