name:                scheduler-benchmarks
version:             1.0.0.0
synopsis:            Work stealing scheduler.
description:         A work stealing scheduler that is primarily developed for [massiv](https://github.com/lehins/massiv) array library, but it is general enough to be useful for any computation that fits the model of few workers and many jobs.
homepage:            https://github.com/lehins/haskell-scheduler
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2018-2021 Alexey Kuleshevich
category:            Parallelism, Concurrency
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

benchmark scheduler
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Scheduler.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , async-pool
                     , criterion
                     , deepseq
                     , monad-par
                     , scheduler
                     , parallel
                     , unliftio >= 0.2.10
                     , streamly >= 0.7.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/haskell-benchmarks
